feat:  save, edit new score
cải thiện UX & UI
thêm môn học nếu không có
thêm điểm môn học cho sinh viên
môn học có thể đổi tên